--- a/index.html
+++ b/index.html
@@ -3,76 +3,90 @@
 <head>
     <meta charset="UTF-8">
 <!-- ADD META TAG REQUIRED TO MAKE PAGE RESPONSIVE-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="description" content="Vanguard- Leading the Future of Success. Premier strategic investment and business acceleration firm for high-growth enterprises.">
     <meta name="keywords" content="business growth, strategic investment, mergers, corporate consulting, digital transformation">
 <!-- ADD META TAG FOR AUTHOR AND YOUR NAME-->
+    <meta name="author" content="Nejat Nehan">
+
     <title>Vanguard | Leading the Future of Success</title>
 <!-- ADD LINK TO YOUR CSS-->
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
 <!-- WRAP CONTENT IN VALIDATED, SEMANTIC HTML5 (SEE HINTS FOLDER LINKED TO IN THE CANVAS INSTRUCTIONS)-->
-    Vanguard
-        Main Navigation
-            About
-            Services
-            Contact
+<header> 
+    <h1>Vanguard</h1>
+        <h2>Main Navigation</h2>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+</header>
 
-        Innovation & Investment
-        We empower businesses to lead the future with high-impact strategies, market intelligence, and financial solutions that drive success.
-        Request a Consultation
+<main>
+    <section class="iandi">   
+        <h2>Innovation & Investment</h2>
+        <p>We empower businesses to lead the future with high-impact strategies, market intelligence, and financial solutions that drive success.</p>
+        <button>Request a Consultation</button>
+    </section>
 
-        Our Expertise. Your Edge.
-        We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.'
+    <section class="oeye">
+       <h2>Our Expertise. Your Edge.</h2>
+       <p>We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.</p>
+    </section>
 
-        What We Offer
-            Strategic Growth Consulting
-            Unlock new revenue streams and optimize market expansion strategies.
+    <section class="wwo">
+       <h2>What We Offer</h2>
+           <h3>Strategic Growth Consulting</h3>
+           <p>Unlock new revenue streams and optimize market expansion strategies.</p>
 
-            High-Impact Investment Solutions
-            Maximize returns with data-driven portfolio management.
+           <h3>High-Impact Investment Solutions</h3>
+           <p>Maximize returns with data-driven portfolio management.</p>
 
-            Business Acceleration & Mergers
-            Identify opportunities for rapid growth and high-value acquisitions.
+            <h3>Business Acceleration & Mergers</h3>
+            <p>Identify opportunities for rapid growth and high-value acquisitions.</p>
 
-            Digital Transformation
-            Stay at the forefront of industry advancements with AI, blockchain, and automation.
+            <h3>Digital Transformation</h3>
+            <p>Stay at the forefront of industry advancements with AI, blockchain, and automation.</p>
 
-            Exclusive Executive Advisory Services
-            Personalized insights and leadership support for C-suite executives and high-net-worth investors.
+            <h3>Exclusive Executive Advisory Services</h3>
+            <p>Personalized insights and leadership support for C-suite executives and high-net-worth investors.</p>
 
-            Corporate Innovation
-            Strategic implementation of new ideas, technologies, and processes to drive business growth, enhance competitive advantage, and adapt to evolving market demands.
+            <h3>Corporate Innovation</h3>
+            <p>Strategic implementation of new ideas, technologies, and processes to drive business growth, enhance competitive advantage, and adapt to evolving market demands.</p>
+    </section>
 
-            Proven Results
-            Our data-driven strategies have delivered outstanding ROI, leading to significant revenue growth.
+    <section class="pr">
+           <h2>Proven Results</h2>
+           <p>Our data-driven strategies have delivered outstanding ROI, leading to significant revenue growth.</p>
 
-                Profits
-                Year
-                Revenue ($M)
-                Growth (%)
+               <h3>Profits</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Year</th>
+                                <th>Revenue ($M)</th>
+                                <th>Growth (%)</th>
+                            </tr>
+                        </thead>
 
-                2020
-                $120M
-                30%
+                        <tbody>
+                            <tr><td>2020</td><td>$120M</td><td>30%</td></tr>
+                            <tr><td>2021</td><td>$180M</td><td>50%</td></tr>
+                            <tr><td>2022</td><td>$250M</td><td>70%</td></tr>
+                            <tr><td>2023</td><td>$340M</td><td>85%</td></tr>
+                            <tr><td>2024</td><td>$420M</td><td>100%</td></tr>
+                        </tbody>
+                    </table>
 
-                2021
-                $180M
-                50%
-
-                2022
-                $250M
-                70%
-
-                2023
-                $340M
-                85%
-
-                2024
-                $420M
-                100%
-
-                Growth
+                <h3>Growth</h3>
 <!-- CODE PROVIDED FOR YOU, NOTHING TO DO FOR THE BAR CHART IN THE HTML-->
                     <div  id="bar-chart">
                         <div class="bar" data-year="2020" style="--height: 30%;"></div>
@@ -81,22 +95,37 @@
                         <div class="bar" data-year="2023" style="--height: 85%;"></div>
                         <div class="bar" data-year="2024" style="--height: 100%;"></div>
                     </div>
+    </section>
 
-        Contact Us
-        Want to take your business to the next level? Get in touch with our elite team today.
+    <section>
+        <h2>Contact Us</h2>
+        <p>Want to take your business to the next level? Get in touch with our elite team today.</p>
+            <form>
+               <label for="full-name">Full Name</label><br>
+               <input type="text" id="full-name" name="full-name"><br>
 
-            Full Name
+               <label for="email">Email Address</label><br>
+               <input type="email" id="email" name="email"><br>
 
-            Email Address
+               <label for="company">Company Name</label><br>
+               <input type="text" id="company" name="company"><br>
 
-            Company Name
+               <label for="industry">Industry</label><br>
+               <input type="text" id="industry" name="industry"><br>
 
-            Industry
+               <label for="message">How can we help you!</label><br>
+               <textarea id="message" name="message"></textarea><br>
 
-            How can we help you?
+               <button type="submit">Submit</button>
+            </form>
+    </section>
+</main>
 
-            Submit
+<footer>
+       <p>2025 Vanguard. All rights reserved.</p> 
+       <p>Email: info@vanguard.com</p> 
+       <p>Phone: 480.123.4567</p>
+</footer>
 
-        2025 Vanguard. All rights reserved. 
-        Email: info@vanguard.com 
-        Phone: 480.123.4567
+</body>
+</html>
