--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 <!-- WRAP CONTENT IN VALIDATED, SEMANTIC HTML5 (SEE HINTS FOLDER LINKED TO IN THE CANVAS INSTRUCTIONS)-->
 <header> 
     <h1>Vanguard</h1>
-        <h2>Main Navigation</h2>
-            <nav>
+        <nav>
+            <h2>Main Navigation</h2>
+                <input type="checkbox"  id="menu-toggle">
+                <label for="menu-toggle"><span></span></label>
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
@@ -38,29 +40,42 @@
     </section>
 
     <section class="oeye">
-       <h2>Our Expertise. Your Edge.</h2>
-       <p>We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.</p>
+        <h2>Our Expertise. Your Edge.</h2>
+        <p>We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.</p>
     </section>
 
     <section class="wwo">
-       <h2>What We Offer</h2>
-           <h3>Strategic Growth Consulting</h3>
-           <p>Unlock new revenue streams and optimize market expansion strategies.</p>
+        <h2>What We Offer</h2>
 
-           <h3>High-Impact Investment Solutions</h3>
-           <p>Maximize returns with data-driven portfolio management.</p>
+            <div class="box1">
+                <h3>Strategic Growth Consulting</h3>
+                <p>Unlock new revenue streams and optimize market expansion strategies.</p>
+            </div>
 
-            <h3>Business Acceleration & Mergers</h3>
-            <p>Identify opportunities for rapid growth and high-value acquisitions.</p>
+            <div class="box2">
+                <h3>High-Impact Investment Solutions</h3>
+                <p>Maximize returns with data-driven portfolio management.</p>
+            </div>
 
-            <h3>Digital Transformation</h3>
-            <p>Stay at the forefront of industry advancements with AI, blockchain, and automation.</p>
+            <div class="box3">
+                <h3>Business Acceleration & Mergers</h3>
+                <p>Identify opportunities for rapid growth and high-value acquisitions.</p>
+            </div>
 
-            <h3>Exclusive Executive Advisory Services</h3>
-            <p>Personalized insights and leadership support for C-suite executives and high-net-worth investors.</p>
+            <div class="box4">
+                <h3>Digital Transformation</h3>
+                <p>Stay at the forefront of industry advancements with AI, blockchain, and automation.</p>
+            </div>
 
-            <h3>Corporate Innovation</h3>
-            <p>Strategic implementation of new ideas, technologies, and processes to drive business growth, enhance competitive advantage, and adapt to evolving market demands.</p>
+            <div class="box5">
+                <h3>Exclusive Executive Advisory Services</h3>
+                <p>Personalized insights and leadership support for C-suite executives and high-net-worth investors.</p>
+            </div>
+
+            <div class="box6">
+                <h3>Corporate Innovation</h3>
+                <p>Strategic implementation of new ideas, technologies, and processes to drive business growth, enhance competitive advantage, and adapt to evolving market demands.</p>
+            </div>    
     </section>
 
     <section class="pr">
@@ -97,7 +112,7 @@
                     </div>
     </section>
 
-    <section>
+    <section class="cu">
         <h2>Contact Us</h2>
         <p>Want to take your business to the next level? Get in touch with our elite team today.</p>
             <form>
@@ -122,8 +137,8 @@
 </main>
 
 <footer>
-       <p>2025 Vanguard. All rights reserved.</p> 
-       <p>Email: info@vanguard.com</p> 
+       <p>&copy; 2025 Vanguard. All rights reserved.</p> 
+       <p>Email: <a href="mailto:info@vanguard.com">info@vanguard.com</a></p> 
        <p>Phone: 480.123.4567</p>
 </footer>
 
